fixes http://wordpress.org/support/topic/icons-do-not-align-or-line-up

--- a/assets/css/compiled-style.css
+++ b/assets/css/compiled-style.css
@@ -7185,6 +7185,9 @@ a.wp-menu-open .wp-menu-image:before,
 #menu-posts-download div.wp-menu-name {
   padding-left: 30px !important;
 }
+.folded h3.popover-title {
+  height: 20px;
+}
 .menu-icon-dashboard .wp-menu-image:before {
   content: "\e09e";
 }
