--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -655,6 +655,10 @@ a.wp-menu-open .wp-menu-image:before, .current .wp-menu-image:before {color: #ff
   }
 }
 
+.folded h3.popover-title{
+  height: 20px;
+}
+
 .menu-icon-dashboard .wp-menu-image:before                    { content: "\e09e"; }
 .menu-icon-post .wp-menu-image:before                         { content: "\e068"; }
 .menu-icon-page .wp-menu-image:before                         { content: "\e0bd"; }
